--- a/settings.properties
+++ b/settings.properties
@@ -1,5 +1,6 @@
-server.url = http://127.0.0.1/ScattPort/xmlrpc
+server.url = http://192.168.1.33/ScattPort/xmlrpc
 client.secret = d769926f814ba466736875ed4ff4da2b4c53b3e7
 fetchjob.interval = 10
 progress.interval = 5
-heartbeat.interval = 60
+heartbeat.interval = 10
+calculation.path = /tmp/
