--- a/build.xml
+++ b/build.xml
@@ -1,80 +1,86 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project basedir="." default="build" name="ScattPortClient">
-    <property environment="env"/>
-    <property name="debuglevel" value="source,lines,vars"/>
-    <property name="target" value="1.6"/>
-    <property name="source" value="1.6"/>
-    <path id="ScattPortClient.classpath">
-        <pathelement location="build/classes"/>
-        <pathelement location="lib/commons-codec-1.4.jar"/>
-        <pathelement location="lib/commons-httpclient-3.0.1.jar"/>
-        <pathelement location="lib/commons-logging-1.1.1.jar"/>
-        <pathelement location="lib/commons-logging-1.1.jar"/>
-        <pathelement location="lib/httpclient-4.1.2.jar"/>
-        <pathelement location="lib/httpclient-cache-4.1.2.jar"/>
-        <pathelement location="lib/httpcore-4.1.2.jar"/>
-        <pathelement location="lib/httpmime-4.1.2.jar"/>
-        <pathelement location="lib/sigar.jar"/>
-        <pathelement location="lib/ws-commons-util-1.0.2.jar"/>
-        <pathelement location="lib/xmlrpc-client-3.1.3.jar"/>
-        <pathelement location="lib/xmlrpc-common-3.1.3.jar"/>
-        <pathelement location="lib/xmlrpc-server-3.1.3.jar"/>
-    </path>
-    <target name="init">
-        <mkdir dir="build/classes"/>
-        <copy includeemptydirs="false" todir="build/classes">
-            <fileset dir="src">
-                <exclude name="**/*.launch"/>
-                <exclude name="**/*.java"/>
-            </fileset>
-        </copy>
-    </target>
-    <target name="clean">
-        <delete dir="build/classes"/>
-    </target>
-    <target depends="clean" name="cleanall"/>
-    <target depends="build-subprojects,build-project" name="build"/>
-    <target name="build-subprojects"/>
-    <target depends="init" name="build-project">
-        <echo message="${ant.project.name}: ${ant.file}"/>
-        <javac debug="true" debuglevel="${debuglevel}" destdir="build/classes" source="${source}" target="${target}">
-            <src path="src"/>
-            <classpath refid="ScattPortClient.classpath"/>
-        </javac>
-    </target>
-    <target name="Client">
-        <java classname="org.scattport.client.Client" failonerror="true" fork="yes">
-            <classpath refid="ScattPortClient.classpath"/>
-        </java>
-    </target>
-    <target name="jar">
-        <copy includeemptydirs="false" todir="dist">
-            <fileset dir="lib">
-                <exclude name="**/*.jar"/>
-            </fileset>
-        </copy>
-        <jar destfile="dist/ScattPortClient.jar">
-            <manifest>
-                <attribute name="Main-Class" value="org.eclipse.jdt.internal.jarinjarloader.JarRsrcLoader"/>
-                <attribute name="Rsrc-Main-Class" value="org.scattport.client.Client"/>
-                <attribute name="Class-Path" value="."/>
-                <attribute name="Rsrc-Class-Path" value="./ commons-codec-1.4.jar commons-httpclient-3.0.1.jar commons-logging-1.1.1.jar commons-logging-1.1.jar httpclient-4.1.2.jar httpclient-cache-4.1.2.jar httpcore-4.1.2.jar httpmime-4.1.2.jar sigar.jar ws-commons-util-1.0.2.jar xmlrpc-client-3.1.3.jar xmlrpc-common-3.1.3.jar xmlrpc-server-3.1.3.jar"/>
-            </manifest>
-            <zipfileset src="jar-in-jar-loader.zip"/>
-            <fileset dir="build/classes"/>
-            <zipfileset dir="lib" includes="commons-codec-1.4.jar"/>
-            <zipfileset dir="lib" includes="commons-httpclient-3.0.1.jar"/>
-            <zipfileset dir="lib" includes="commons-logging-1.1.1.jar"/>
-            <zipfileset dir="lib" includes="commons-logging-1.1.jar"/>
-            <zipfileset dir="lib" includes="httpclient-4.1.2.jar"/>
-            <zipfileset dir="lib" includes="httpclient-cache-4.1.2.jar"/>
-            <zipfileset dir="lib" includes="httpcore-4.1.2.jar"/>
-            <zipfileset dir="lib" includes="httpmime-4.1.2.jar"/>
-            <zipfileset dir="lib" includes="sigar.jar"/>
-            <zipfileset dir="lib" includes="ws-commons-util-1.0.2.jar"/>
-            <zipfileset dir="lib" includes="xmlrpc-client-3.1.3.jar"/>
-            <zipfileset dir="lib" includes="xmlrpc-common-3.1.3.jar"/>
-            <zipfileset dir="lib" includes="xmlrpc-server-3.1.3.jar"/>
-        </jar>
-    </target>
+	<property environment="env" />
+	<property name="debuglevel" value="source,lines,vars" />
+	<property name="target" value="1.6" />
+	<property name="source" value="1.6" />
+	<path id="ScattPortClient.classpath">
+		<pathelement location="build/classes" />
+		<pathelement location="lib/commons-codec-1.4.jar" />
+		<pathelement location="lib/commons-httpclient-3.0.1.jar" />
+		<pathelement location="lib/commons-logging-1.1.1.jar" />
+		<pathelement location="lib/commons-logging-1.1.jar" />
+		<pathelement location="lib/httpclient-4.1.2.jar" />
+		<pathelement location="lib/httpclient-cache-4.1.2.jar" />
+		<pathelement location="lib/httpcore-4.1.2.jar" />
+		<pathelement location="lib/httpmime-4.1.2.jar" />
+		<pathelement location="lib/sigar.jar" />
+		<pathelement location="lib/ws-commons-util-1.0.2.jar" />
+		<pathelement location="lib/xmlrpc-client-3.1.3.jar" />
+		<pathelement location="lib/xmlrpc-common-3.1.3.jar" />
+		<pathelement location="lib/xmlrpc-server-3.1.3.jar" />
+	</path>
+	<target name="init">
+		<mkdir dir="build/classes" />
+		<copy includeemptydirs="false" todir="build/classes">
+			<fileset dir="src">
+				<exclude name="**/*.launch" />
+				<exclude name="**/*.java" />
+			</fileset>
+		</copy>
+	</target>
+	<target name="clean">
+		<delete dir="build/classes" />
+	</target>
+	<target depends="clean" name="cleanall" />
+	<target depends="build-subprojects,build-project" name="build" />
+	<target name="build-subprojects" />
+	<target depends="init" name="build-project">
+		<echo message="${ant.project.name}: ${ant.file}" />
+		<javac debug="true" debuglevel="${debuglevel}" destdir="build/classes"
+			source="${source}" target="${target}">
+			<src path="src" />
+			<classpath refid="ScattPortClient.classpath" />
+		</javac>
+	</target>
+	<target name="Client">
+		<java classname="org.scattport.client.Client" failonerror="true"
+			fork="yes">
+			<classpath refid="ScattPortClient.classpath" />
+		</java>
+	</target>
+	<target name="jar">
+		<mkdir dir="dist" />
+		<mkdir dir="dist/lib" />
+		<copy includeemptydirs="false" todir="dist/lib">
+			<fileset dir="lib">
+				<exclude name="**/*.jar" />
+			</fileset>
+		</copy>
+		<jar destfile="dist/ScattPortClient.jar">
+			<manifest>
+				<attribute name="Main-Class"
+					value="org.eclipse.jdt.internal.jarinjarloader.JarRsrcLoader" />
+				<attribute name="Rsrc-Main-Class" value="org.scattport.client.Client" />
+				<attribute name="Class-Path" value="." />
+				<attribute name="Rsrc-Class-Path"
+					value="./ commons-codec-1.4.jar commons-httpclient-3.0.1.jar commons-logging-1.1.1.jar commons-logging-1.1.jar httpclient-4.1.2.jar httpclient-cache-4.1.2.jar httpcore-4.1.2.jar httpmime-4.1.2.jar sigar.jar ws-commons-util-1.0.2.jar xmlrpc-client-3.1.3.jar xmlrpc-common-3.1.3.jar xmlrpc-server-3.1.3.jar" />
+			</manifest>
+			<zipfileset src="jar-in-jar-loader.zip" />
+			<fileset dir="build/classes" />
+			<zipfileset dir="lib" includes="commons-codec-1.4.jar" />
+			<zipfileset dir="lib" includes="commons-httpclient-3.0.1.jar" />
+			<zipfileset dir="lib" includes="commons-logging-1.1.1.jar" />
+			<zipfileset dir="lib" includes="commons-logging-1.1.jar" />
+			<zipfileset dir="lib" includes="httpclient-4.1.2.jar" />
+			<zipfileset dir="lib" includes="httpclient-cache-4.1.2.jar" />
+			<zipfileset dir="lib" includes="httpcore-4.1.2.jar" />
+			<zipfileset dir="lib" includes="httpmime-4.1.2.jar" />
+			<zipfileset dir="lib" includes="sigar.jar" />
+			<zipfileset dir="lib" includes="ws-commons-util-1.0.2.jar" />
+			<zipfileset dir="lib" includes="xmlrpc-client-3.1.3.jar" />
+			<zipfileset dir="lib" includes="xmlrpc-common-3.1.3.jar" />
+			<zipfileset dir="lib" includes="xmlrpc-server-3.1.3.jar" />
+		</jar>
+	</target>
 </project>
