--- a/build.xml
+++ b/build.xml
@@ -66,7 +66,7 @@
 				<attribute name="Rsrc-Class-Path"
 					value="./ commons-codec-1.4.jar commons-httpclient-3.0.1.jar commons-logging-1.1.1.jar commons-logging-1.1.jar httpclient-4.1.2.jar httpclient-cache-4.1.2.jar httpcore-4.1.2.jar httpmime-4.1.2.jar sigar.jar ws-commons-util-1.0.2.jar xmlrpc-client-3.1.3.jar xmlrpc-common-3.1.3.jar xmlrpc-server-3.1.3.jar" />
 			</manifest>
-			<zipfileset src="jar-in-jar-loader.zip" />
+			<zipfileset src="lib/jar-in-jar-loader.zip" />
 			<fileset dir="build/classes" />
 			<zipfileset dir="lib" includes="commons-codec-1.4.jar" />
 			<zipfileset dir="lib" includes="commons-httpclient-3.0.1.jar" />
