--- a/build.xml
+++ b/build.xml
@@ -83,4 +83,14 @@
 			<zipfileset dir="lib" includes="xmlrpc-server-3.1.3.jar" />
 		</jar>
 	</target>
+	<target name="install" depends="jar" description="install to
+		/opt/scattportd/">
+		<mkdir dir="/opt/scattportd" />
+		<copy todir="/opt/scattportd/" file ="dist/ScattPortClient.jar" />
+		<copy todir="/usr/lib/">
+			<fileset dir="dist/lib/">
+				<include name="*.so" />
+			</fileset>
+		</copy>
+	</target>
 </project>
